fixed preview are being too large (vertically)

--- a/Whoaverse/Whoaverse/Content/Whoaverse-Dark.css
+++ b/Whoaverse/Whoaverse/Content/Whoaverse-Dark.css
@@ -1046,6 +1046,8 @@ pre, code {
     border-width: 1px;
     font-size: 12px;
     padding: 15px;
+	display: table;
+	width: 100%;
 }
 
 .panel-title {
