--- a/Whoaverse/Whoaverse/Content/Whoaverse.css
+++ b/Whoaverse/Whoaverse/Content/Whoaverse.css
@@ -1048,6 +1048,8 @@ pre, code {
     border-width: 1px;
     font-size: 12px;
     padding: 15px;
+	display: table;
+	width: 100%;
 }
 
 .panel-title {
